vendor: pin ostree version
Signed-off-by: Peter Hunt <pehunt@redhat.com>

--- a/vendor.conf
+++ b/vendor.conf
@@ -14,7 +14,7 @@ github.com/peterbourgon/diskv v2.0.1
 github.com/sirupsen/logrus v1.0.0
 github.com/containers/image cri-o-release-1.11
 github.com/docker/docker-credential-helpers d68f9aeca33f5fd3f08eeae5e9d175edf4e731d1
-github.com/ostreedev/ostree-go master
+github.com/ostreedev/ostree-go 2ca91aaf921c915e46341220d7d51bebd894576a
 github.com/containers/storage release-1.11
 github.com/containernetworking/cni v0.4.0
 google.golang.org/grpc 5b3c4e850e90a4cf6a20ebd46c8b32a0a3afcb9e https://github.com/grpc/grpc-go
