Revert "Update runc to v1.0.0"
This reverts commit 3373b31094ba707a27d0d94caecdcf3146ed9f80.

Signed-off-by: Sascha Grunert <sgrunert@redhat.com>

--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -54,7 +54,7 @@ dependencies:
       match: cri_tools_git_version
 
   - name: runc
-    version: v1.0.0
+    version: v1.0.0-rc95
     refPaths:
     - path: scripts/versions
       match: runc
