--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ on:
     tags:
       - v*
     branches:
-      - master
+      - main
       - release-*
   pull_request:
 env:
@@ -214,7 +214,7 @@ jobs:
       - run: make bundle-test-e2e
 
   upload-artifacts:
-    if: github.ref == 'refs/heads/master' || contains(github.ref, 'refs/heads/release') || contains(github.ref, 'refs/tags')
+    if: github.ref == 'refs/heads/main' || contains(github.ref, 'refs/heads/release') || contains(github.ref, 'refs/tags')
     runs-on: ubuntu-latest
     needs: bundle-test
     steps:
@@ -266,7 +266,7 @@ jobs:
       - run: make codecov
 
   release-notes:
-    if: github.ref == 'refs/heads/master' || contains(github.ref, 'refs/heads/release') || contains(github.ref, 'refs/tags')
+    if: github.ref == 'refs/heads/main' || contains(github.ref, 'refs/heads/release') || contains(github.ref, 'refs/tags')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-go@v2
@@ -293,7 +293,7 @@ jobs:
           if-no-files-found: ignore
 
   dependencies:
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/main'
     needs: release-notes
     runs-on: ubuntu-latest
     steps:
@@ -320,7 +320,7 @@ jobs:
           path: build/dependencies
 
   release-branch-forward:
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-go@v2
