--- a/contrib/bundle/build
+++ b/contrib/bundle/build
@@ -154,6 +154,8 @@ TAR_DIR=cri-o
 tar cfz "$ARCHIVE" tmp --transform s/tmp/$TAR_DIR/
 rm -rf "$TMPDIR"
 echo "Created $ARCHIVE_PATH/$ARCHIVE"
+sha256sum "$ARCHIVE" > "$ARCHIVE_SHA256SUM"
+echo "Created $ARCHIVE_PATH/$ARCHIVE_SHA256SUM"
 
 # Test the archive
 echo "Testing archive"
