--- a/.github/ISSUE_TEMPLATE/reviewer.yml
+++ b/.github/ISSUE_TEMPLATE/reviewer.yml
@@ -1,7 +1,6 @@
-name: Organization Membership Request
-description: Request membership in the CRI-O organization
-labels: [ "area/github-membership" ]
-title: "REQUEST: New membership for <your-GH-handle>"
+name: Reviewer Request
+description: Request reviewer status in the CRI-O organization
+title: "REQUEST: New reviewer status for <your-GH-handle>"
 body:
 - id: github
   type: input
