contrib/test: always install BATS for integration.
Don't expect CI nodes to be set up correctly with
BATS. Instead, always install BATS before running
'localintegration' tests.

Signed-off-by: Krisztian Litkey <krisztian.litkey@intel.com>

--- a/contrib/test/integration/main.yml
+++ b/contrib/test/integration/main.yml
@@ -117,6 +117,8 @@
   tasks:
     - name: install parallel
       include: build/parallel.yml
+    - name: clone build and install bats
+      include: "build/bats.yml"
     - name: clone build and install cri-tools
       include: "build/cri-tools.yml"
       vars:
