--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ on:
       - release-*
   pull_request:
 env:
-  GO_VERSION: '1.17'
+  GO_VERSION: '1.18'
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -70,6 +70,7 @@ jobs:
               "apk --no-cache add \
                 bash \
                 build-base \
+                git \
                 gpgme-dev \
                 libseccomp-dev \
                 libselinux-dev \
