--- a/contrib/test/integration/golang.yml
+++ b/contrib/test/integration/golang.yml
@@ -49,10 +49,8 @@
     - "{{ ansible_env.GOPATH }}/src/k8s.io/test-infra"
 
 - name: install Go tools and dependencies
-  shell: go get -u "github.com/{{ item }}"
+  shell: go install "github.com/{{ item }}@latest"
   args:
     chdir: /
   with_items:
     - onsi/ginkgo/ginkgo
-    - onsi/gomega
-    - jteeuwen/go-bindata/go-bindata
