Add sha256sum bundle files to uploaded artifacts
This fixes the availablility of the SHA files in the bucket.

Signed-off-by: Sascha Grunert <sgrunert@redhat.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -179,7 +179,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: bundle
-          path: build/bundle/*.tar.gz
+          path: build/bundle/*.tar.gz*
 
   bundle-test:
     runs-on: ubuntu-latest
