--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -32,6 +32,30 @@ jobs:
           JOBS: '1'
           RUN_CRITEST: '1'
 
+  critest-conmonrs:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/setup-go@v2
+        with:
+          go-version: ${{ env.GO_VERSION }}
+      - uses: actions/checkout@v2
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ~/go/pkg/mod
+            ~/.cache/go-build
+          key: go-integration-${{ hashFiles('**/go.sum') }}
+          restore-keys: go-integration-
+      - run: scripts/github-actions-packages
+      - run: scripts/github-actions-setup
+      - run: make all test-binaries
+      - run: sudo -E test/test_runner.sh critest.bats
+        env:
+          JOBS: '1'
+          RUN_CRITEST: '1'
+          RUNTIME_TYPE: pod
+          CRI_SKIP: 'runtime should support attach'  # TODO: make this test work
+
   test:
     runs-on: ubuntu-latest
     steps:
