Add CodeQL Github actions
Add standard CodeQL Github actions with autobuild.

Signed-off-by: David Korczynski <david@adalogics.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -340,3 +340,16 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           DRY_RUN: false
+  codeql-build:
+    runs-on: ubuntu-latest
+    permissions:
+      security-events: write
+      actions: read
+      contents: read
+    steps:
+      - uses: actions/checkout@v3
+      - uses: github/codeql-action/init@v2
+        with:
+          languages: go
+      - uses: github/codeql-action/autobuild@v2
+      - uses: github/codeql-action/analyze@v2
