--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -12,7 +12,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: golangci/golangci-lint-action@v2
+      - uses: actions/setup-go@v3
+        with:
+          go-version: '1.16'
+      - uses: golangci/golangci-lint-action@v3
         with:
           # must be specified without patch version
           version: v1.35
