Focus failing e2e test
Signed-off-by: Sascha Grunert <sgrunert@redhat.com>

--- a/contrib/test/integration/e2e.yml
+++ b/contrib/test/integration/e2e.yml
@@ -36,7 +36,7 @@
             --provider=local
             --test
             --test_args="-host=https://{{ ansible_default_ipv4.address }}:6443
-                        --ginkgo.skip={{ skip_tests | join('|') | replace(' ', '\\s') | regex_replace('([][)(])', '\\\\\1') }}
+                        --ginkgo.focus="evicted pods should be terminal"
                         --ginkgo.noColor
                         --ginkgo.succinct
                         --report-dir={{ artifacts }}"
