--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -213,15 +213,42 @@ jobs:
             moby-runc
       - run: make bundle-test-e2e
 
+  sign-artifacts:
+    if: github.ref == 'refs/heads/main' || contains(github.ref, 'refs/heads/release') || contains(github.ref, 'refs/tags')
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+    env:
+      COSIGN_EXPERIMENTAL: 1
+    needs: bundle-test
+    steps:
+      - uses: actions/checkout@v3
+      - uses: sigstore/cosign-installer@v2
+      - uses: actions/download-artifact@v3
+        with:
+          name: bundle
+          path: build/bundle
+      - run: make sign-artifacts
+      - uses: actions/upload-artifact@v3
+        with:
+          name: signatures
+          path: |
+            build/bundle/*.sig
+            build/bundle/*.cert
+
   upload-artifacts:
     if: github.ref == 'refs/heads/main' || contains(github.ref, 'refs/heads/release') || contains(github.ref, 'refs/tags')
     runs-on: ubuntu-latest
-    needs: bundle-test
+    needs: sign-artifacts
     steps:
       - uses: actions/checkout@v3
       - uses: actions/download-artifact@v3
         with:
           name: bundle
+          path: build/bundle
+      - uses: actions/download-artifact@v3
+        with:
+          name: signatures
           path: build/bundle
       - run: make upload-artifacts
         env:
