--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -265,6 +265,8 @@ jobs:
       - run: make codecov
 
   release-notes:
+    permissions:
+      contents: none
     if: github.ref == 'refs/heads/main' || contains(github.ref, 'refs/heads/release') || contains(github.ref, 'refs/tags')
     runs-on: ubuntu-latest
     steps:
@@ -292,6 +294,8 @@ jobs:
           if-no-files-found: ignore
 
   dependencies:
+    permissions:
+      contents: none
     if: github.ref == 'refs/heads/main'
     needs: release-notes
     runs-on: ubuntu-latest
@@ -319,6 +323,8 @@ jobs:
           path: build/dependencies
 
   release-branch-forward:
+    permissions:
+      contents: none
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
