--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -31,3 +31,4 @@ jobs:
           days-before-stale: 30
           days-before-close: 90
           remove-stale-when-updated: false
+          operations-per-run: 300
